--- a/zabbix_agentd.userparams.conf
+++ b/zabbix_agentd.userparams.conf
@@ -1,1 +1,2 @@
 UserParameter=elasticsearch.clusterstate,powershell.exe -NoLogo -Command "&'c:\Program Files\Zabbix\scripts\GetClusterStatusZabbix.ps1'"
+UserParameter=elasticsearch.indexperf,powershell.exe -NoLogo -Command "&'c:\Program Files\Zabbix\scripts\GetNodeInfo.ps1' -Stat indexperf"
