--- a/zabbix_agentd.win.conf
+++ b/zabbix_agentd.win.conf
@@ -122,7 +122,7 @@ Server=yourserver.example.com
 # Default:
 # ServerActive=
 
-#ServerActive=zabbix-server.creditinfonet.com
+#ServerActive=
 
 ### Option: Hostname
 #	Unique, case sensitive hostname.
